Conditional text applied
Output generated successfully using the following DITAVAL parameters

<?xml version="1.0" encoding="UTF-8"?>
<val>
    <prop action="exclude" att="audience" val="expert"/>
    <prop action="include" att="audience" val="novice"/>
</val>

--- a/Lisa-Chapter3/Concepts/C_Using_Workspaces.dita
+++ b/Lisa-Chapter3/Concepts/C_Using_Workspaces.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="C_Using_Workspaces">
+<concept id="C_Using_Workspaces" audience="expert">
     <title>Using Workspaces</title>
     <prolog>
         <author>Lisa Adams</author>
