--- a/Lisa-Chapter3/Concepts/C_workspace_characteristics.dita
+++ b/Lisa-Chapter3/Concepts/C_workspace_characteristics.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_workspace_characteristics">
+<concept id="c_workspace_characteristics" audience="novice">
     <title>Workspace Characteristics</title>
     <prolog>
         <author>Lisa Adams</author>
